add brightness control & readme

--- a/pixoo-dash-config.html
+++ b/pixoo-dash-config.html
@@ -3,7 +3,7 @@
         category: "config",
         defaults: {
             ip: {
-                value: "192.168.8.1",
+                value: "192.168.1.100",
                 required: true
             },
             debug: {
@@ -29,5 +29,5 @@
 </script>
 
 <script type="text/html" data-help-name="pixoo-dash-config">
-    <p>TODO</p>
+    <p>Enter the IP address of your Pixoo64. You can find it in the Divoom app. Make sure your Pixoo64 is connected to the same network as Node-RED.</p>
 </script>
